test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-labeled-action-override/namespace-labeled.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kyverno-audit: "true"
  name: labeled
