test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-labeled-action-override/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-default-namespace
  namespace: default
  labels:
    foo: bad
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
