test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-labeled-action-override/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enforce-validate-labeled-action-override
spec:
  steps:
  - name: create namespace
    try:
    - apply:
        file: namespace-labeled.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-labels-audit-labeled-namespaces
  - name: create bad pod
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-fail.yaml
  - name: create bad pod in labeled namespace
    try:
    - apply:
        file: pod-pass.yaml
